[JS-Todo] feat: Todo 삭제 구현

--- a/css/reset.css
+++ b/css/reset.css
@@ -52,3 +52,12 @@ input {
   outline: none;
   border: none;
 }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
