--- a/css/app.css
+++ b/css/app.css
@@ -49,6 +49,7 @@ body {
 
 .todo__item {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   margin: 0.5px 0;
   min-height: 50px;
@@ -58,8 +59,18 @@ body {
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
 }
 
+.todo__item__box {
+  display: flex;
+  align-items: center;
+}
+
 .todo__toggle {
   margin: 0 16px 0 8px;
+}
+
+.todo__destroy {
+  margin-right: 12px;
+  font-size: 1rem;
 }
 
 input[type="checkbox"] {
@@ -70,23 +81,6 @@ input[type="checkbox"] {
   appearance: none;
 }
 
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
 input[type="checkbox"]:checked {
   content: "";
   color: #72cab8;
